@@ -26,6 +26,6 @@
 
 targets = $(LTLIBRARY_NAME)
 
-include $(topsrcdir)/build/rules.mk
-include $(topsrcdir)/build/library.mk
+include $(top_srcdir)/build/rules.mk
+include $(top_srcdir)/build/library.mk
 
