@@ -24,7 +24,7 @@
 # $Id$ 
 #
 
-include $(DEPTH)/config_vars.mk
+include $(top_builddir)/config_vars.mk
 
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(EXTRA_INCLUDES) $(CPPFLAGS) $(CFLAGS) $(EXTRA_CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(INCLUDES) $(EXTRA_INCLUDES) $(CPPFLAGS) $(CFLAGS) $(EXTRA_CFLAGS)
@@ -34,11 +34,9 @@ mkinstalldirs = $(top_srcdir)/build/shtool mkdir -f -p
 INSTALL = $(top_srcdir)/build/shtool install -c
 INSTALL_DATA = $(INSTALL) -m 644
 
-DEFS = -DHAVE_CONFIG_H -I. -I$(srcdir) -I$(DEPTH)
+DEFS = -DHAVE_CONFIG_H -I. -I$(srcdir) -I$(top_builddir)
 
 moduledir    = $(libdir)/php/modules
-top_srcdir   = $(topsrcdir)
-top_builddir = $(DEPTH)
 
 .SUFFIXES:
 .SUFFIXES: .S .c .lo .o .s .y .l
